# worker-sdk

./: .gcloudignore  .gcloudignore.jinja2  .gitattributes  .gitignore  .tool-versions  CODEOWNERS  README.md  setup.sh
python/: .flake8  .gitignore  .ignore-excludes  CONTRIBUTING.md  Dockerfile.build  Dockerfile.build.dockerignore  Dockerfile.build.dockerignore.jinja2  README.md  cloudbuild.yaml  pyproject.toml
python/preemo/: __init__.py
python/preemo/worker/: __init__.py  __init__.pyi  _artifact_manager.py  _bytes.py  _env_manager.py  _function_registry.py  _grpc_client.py  _messaging_client.py  _sdk_server.py  _sdk_service.py  _types.py  _worker_client.py  client.py
python/preemo/worker/messaging/: client.py
python/src/tests/unit/: test_function_registry.py  test_index.py
python/src/worker_sdk/: function_registry.py  index.py  index2.py
python/src/worker_sdk/environment/: manager.py
python/src/worker_sdk/message/: client.py
python/src/worker_sdk/messaging/: client.py  message_serialization.py
python/src/worker_sdk/request/: models.py  serializer.py
python/tests/unit/worker/: test_client.py
python/tests/worker/: test_artifact_manager.py  test_bytes.py  test_env.py  test_env_manager.py  test_function_registry.py  test_messaging_client.py  test_validation.py  test_worker_client.py
template_renderer/: .ignore-excludes  Dockerfile.build  Dockerfile.build.dockerignore  Dockerfile.build.dockerignore.jinja2  README.md  cloudbuild.yaml  pyproject.toml
template_renderer/scripts/: render_ignore_templates.py  render_ignore_templates_ensure_no_diff.py
(+49 files in other folders)
